--- a/index.html
+++ b/index.html
@@ -11,8 +11,145 @@
 </head>
 
 <body>
+  <header
+    class="bg-transparent backdrop-blur-sm fixed top-0 left-0 right-0 z-50 font-secundary font-medium tracking-wider">
+    <nav class="container mx-auto px-4 sm:px-6 lg:px-8 py-3 flex items-center justify-between">
+      <a href="#">
+        <img src="./public/assets/logo/logo-transparent-black.png" alt="LH Digital Logo" class="h-10">
+      </a>
+
+      <button id="mobile-menu-button" class="sm:hidden text-eerie-black focus:outline-none">
+        <svg class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7"></path>
+        </svg>
+      </button>
+
+      <div id="mobile-menu"
+        class="hidden sm:hidden absolute top-16 left-0 right-0 bg-antiflash-white/90 backdrop-blur-sm p-4">
+        <ul class="flex flex-col space-y-4">
+          <li><a href="#"
+              class="text-eerie-black hover:underline focus:underline transition-all duration-300">Início</a></li>
+
+          <li>
+            <div class="group relative">
+              <button id="mobile-services-button"
+                class="flex items-center text-eerie-black hover:underline focus:underline transition-all duration-300">
+                Serviços
+                <svg id="mobile-services-arrow" class="h-4 w-4 ml-1 transform transition-transform duration-300"
+                  viewBox="0 0 20 20" fill="currentColor">
+                  <path fill-rule="evenodd"
+                    d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
+                    clip-rule="evenodd" />
+                </svg>
+              </button>
+              <div id="mobile-services-dropdown"
+                class="hidden absolute left-0 mt-2 w-full bg-white rounded-md shadow-lg py-1">
+                <a href="#" class="block px-4 py-2 text-sm text-eerie-black hover:bg-gray-100">LH Express</a>
+                <a href="#" class="block px-4 py-2 text-sm text-eerie-black hover:bg-gray-100">LH Core</a>
+                <a href="#" class="block px-4 py-2 text-sm text-eerie-black hover:bg-gray-100">LH Custom</a>
+                <a href="#" class="block px-4 py-2 text-sm text-eerie-black hover:bg-gray-100">LH Nexus</a>
+                <a href="#" class="block px-4 py-2 text-sm text-eerie-black hover:bg-gray-100">LH Academy</a>
+                <a href="#" class="block px-4 py-2 text-sm text-eerie-black hover:bg-gray-100">LH AI</a>
+              </div>
+            </div>
+          </li>
+
+          <li><a href="#" class="text-eerie-black hover:underline focus:underline transition-all duration-300">Sobre</a>
+          </li>
+          <li><a href="#"
+              class="text-eerie-black hover:underline focus:underline transition-all duration-300">Contato</a>
+          </li>
+        </ul>
+      </div>
+
+      <ul class="hidden sm:flex items-center space-x-8">
+        <li><a href="#" class="text-eerie-black hover:underline focus:underline transition-all duration-300">Início</a>
+        </li>
+
+        <li>
+          <div class="group relative">
+            <button id="desktop-services-button"
+              class="flex items-center text-eerie-black hover:underline focus:underline transition-all duration-300">
+              Serviços
+              <svg id="desktop-services-arrow" class="h-4 w-4 ml-1 transform transition-transform duration-300"
+                viewBox="0 0 20 20" fill="currentColor">
+                <path fill-rule="evenodd"
+                  d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
+                  clip-rule="evenodd" />
+              </svg>
+            </button>
+            <div id="desktop-services-dropdown" class="hidden absolute mt-2 w-48 bg-white rounded-md shadow-lg py-1">
+              <a href="#" class="block px-4 py-2 text-sm text-eerie-black hover:bg-gray-100">LH Express</a>
+              <a href="#" class="block px-4 py-2 text-sm text-eerie-black hover:bg-gray-100">LH Core</a>
+              <a href="#" class="block px-4 py-2 text-sm text-eerie-black hover:bg-gray-100">LH Custom</a>
+              <a href="#" class="block px-4 py-2 text-sm text-eerie-black hover:bg-gray-100">LH Nexus</a>
+              <a href="#" class="block px-4 py-2 text-sm text-eerie-black hover:bg-gray-100">LH Academy</a>
+              <a href="#" class="block px-4 py-2 text-sm text-eerie-black hover:bg-gray-100">LH AI</a>
+            </div>
+          </div>
+        </li>
+
+        <li><a href="#" class="text-eerie-black hover:underline focus:underline transition-all duration-300">Sobre</a>
+        </li>
+        <li><a href="#" class="text-eerie-black hover:underline focus:underline transition-all duration-300">Contato</a>
+        </li>
+      </ul>
+    </nav>
+  </header>
+
+  <section
+    class="min-h-screen w-full relative flex items-center justify-center bg-antiflash-white text-eerie-black overflow-hidden">
+    <div id="background-image" class="absolute z-0 opacity-50 bg-cover bg-center 
+           w-[110vw] h-[110vh] top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2"
+      style="background-image: url('./public/assets/img/home-bg.jpeg');"></div>
+
+    <div class="relative z-10 flex flex-col items-center text-center p-4">
+      <h1 class="text-4xl sm:text-5xl lg:text-6xl font-bold font-primary mb-4">
+        Título Impactante da Homepage
+      </h1>
+
+      <hr class="w-24 h-1 bg-eerie-black my-4">
+
+      <p class="text-base sm:text-lg font-secundary max-w-2xl mb-8">
+        Subtítulo, descrevendo brevemente o propósito da LH Digital e convidando o usuário a explorar o site.
+      </p>
+
+      <div class="flex flex-col sm:flex-row space-y-4 sm:space-y-0 sm:space-x-4">
+        <a href="#"
+          class="inline-block px-8 py-3 bg-eerie-black text-antiflash-white font-bold font-secundary rounded-md transition-all duration-300 hover:opacity-80">
+          Botão Principal
+        </a>
+
+        <a href="#"
+          class="inline-block px-8 py-3 bg-antiflash-white text-eerie-black font-bold font-secundary border-2 border-eerie-black rounded-full transition-all duration-300 hover:bg-gray-200">
+          Botão Secundário
+        </a>
+      </div>
+    </div>
+
+    <div class="absolute bottom-6 right-12 z-20 group">
+      <div
+        class="flex items-center space-x-2 cursor-pointer text-eerie-black hover:text-red-800 transition-colors duration-500">
+        <svg class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+            d="M12 9v2m0 4h.01m-6.938 4h13.856a2 2 0 001.914-2.767L13.75 4.673a2 2 0 00-3.5 0L4.168 15.233A2 2 0 006.086 18z" />
+        </svg>
+        <span class="text-sm font-primary hidden sm:block text-shadow-2xs tracking-wider">Site Fictício</span>
+      </div>
+
+      <div class="absolute bottom-full right-0 mb-2 w-64 p-4 
+                bg-eerie-black text-antiflash-white text-base rounded-lg 
+                opacity-0 group-hover:opacity-100 transition-opacity duration-300 pointer-events-none">
+        <p>Este site foi criado como um projeto de estudo e não representa uma empresa real ou seus serviços. O conteúdo
+          é apenas para fins de demonstração.</p>
+      </div>
+    </div>
+  </section>
 
 
+
+
+  <script src="./src/JS/main.js"></script>
 </body>
 
 </html>
